Update clamp for the duration of setSize